--- a/lib/styles/sass/color.gradient.scss
+++ b/lib/styles/sass/color.gradient.scss
@@ -2,118 +2,81 @@
     --core-color-gradient-slate-110: linear-gradient(
         1.93deg,
         rgba(255, 255, 255, 0) 1.56%,
-        #ffffff 49.91%
+        #ffffff49.91%
     );
     --core-color-gradient-slate-120: linear-gradient(
         88.07deg,
         rgba(255, 255, 255, 0) 1.63%,
-        #ffffff 50.02%
+        #ffffff50.02%
     );
     --core-color-gradient-slate-130: linear-gradient(
         181.93deg,
         rgba(255, 255, 255, 0) 1.63%,
-        #ffffff 50.01%
+        #ffffff50.01%
     );
     --core-color-gradient-slate-140: linear-gradient(
         271.93deg,
         rgba(255, 255, 255, 0) 1.63%,
-        #ffffff 49.98%
+        #ffffff49.98%
     );
     --core-color-gradient-slate-210: linear-gradient(
         1.93deg,
         rgba(246, 247, 248, 0) 1.56%,
-        #f6f7f8 49.91%
+        #f6f7f849.91%
     );
     --core-color-gradient-slate-220: linear-gradient(
         88.07deg,
         rgba(246, 247, 248, 0) 1.63%,
-        #f6f7f8 50.02%
+        #f6f7f850.02%
     );
     --core-color-gradient-slate-230: linear-gradient(
         181.93deg,
         rgba(246, 247, 248, 0) 1.63%,
-        #f6f7f8 50.01%
+        #f6f7f850.01%
     );
     --core-color-gradient-slate-240: linear-gradient(
         271.93deg,
         rgba(246, 247, 248, 0) 1.63%,
-        #f6f7f8 49.98%
+        #f6f7f849.98%
     );
     --core-color-gradient-slate-310: linear-gradient(
         1.93deg,
         rgba(17, 20, 27, 0) 1.56%,
-        #11141b 49.91%
+        #11141b49.91%
     );
     --core-color-gradient-slate-320: linear-gradient(
         88.07deg,
         rgba(17, 20, 27, 0) 1.63%,
-        #11141b 50.02%
+        #11141b50.02%
     );
     --core-color-gradient-slate-330: linear-gradient(
         181.93deg,
         rgba(17, 20, 27, 0) 1.63%,
-        #11141b 50.01%
+        #11141b50.01%
     );
     --core-color-gradient-slate-340: linear-gradient(
         271.93deg,
         rgba(17, 20, 27, 0) 1.63%,
-        #11141b 49.98%
+        #11141b49.98%
     );
     --core-color-gradient-slate-410: linear-gradient(
         1.93deg,
         rgba(24, 28, 37, 0) 1.56%,
-        #181c25 49.91%
+        #181c2549.91%
     );
     --core-color-gradient-slate-420: linear-gradient(
         88.07deg,
         rgba(24, 28, 37, 0) 1.63%,
-        #181c25 50.02%
+        #181c2550.02%
     );
     --core-color-gradient-slate-430: linear-gradient(
         181.93deg,
         rgba(24, 28, 37, 0) 1.63%,
-        #181c25 50.01%
+        #181c2550.01%
     );
     --core-color-gradient-slate-440: linear-gradient(
         271.93deg,
         rgba(24, 28, 37, 0) 1.63%,
-        #181c25 49.98%
+        #181c2549.98%
     );
-}
-
-/* Media Queries for Semantic Tokens */
-
-@media (min-width: 640px) {
-    :root {
-    }
-}
-
-@media (min-width: 768px) {
-    :root {
-    }
-}
-
-@media (min-width: 1024px) {
-    :root {
-    }
-}
-
-@media (min-width: 1280px) {
-    :root {
-    }
-}
-
-@media (min-width: 1440px) {
-    :root {
-    }
-}
-
-/* Theme Styling */
-
-:root {
-    .theme--light {
-    }
-
-    .theme--dark {
-    }
 }
