--- a/lib/styles/sass/color.semantic.scss
+++ b/lib/styles/sass/color.semantic.scss
@@ -1,36 +1,4 @@
 :root {
-}
-
-/* Media Queries for Semantic Tokens */
-
-@media (min-width: 640px) {
-    :root {
-    }
-}
-
-@media (min-width: 768px) {
-    :root {
-    }
-}
-
-@media (min-width: 1024px) {
-    :root {
-    }
-}
-
-@media (min-width: 1280px) {
-    :root {
-    }
-}
-
-@media (min-width: 1440px) {
-    :root {
-    }
-}
-
-/* Theme Styling */
-
-:root {
     .theme--light {
         --semantic-color-background-primary-base: #f6f7f8;
         --semantic-color-background-primary-container: #ffffff;
@@ -39,42 +7,42 @@
         --semantic-color-background-overflow-1-top: linear-gradient(
             1.93deg,
             rgba(255, 255, 255, 0) 1.56%,
-            #ffffff 49.91%
+            #ffffff49.91%
         );
         --semantic-color-background-overflow-1-right: linear-gradient(
             88.07deg,
             rgba(255, 255, 255, 0) 1.63%,
-            #ffffff 50.02%
+            #ffffff50.02%
         );
         --semantic-color-background-overflow-1-bottom: linear-gradient(
             181.93deg,
             rgba(255, 255, 255, 0) 1.63%,
-            #ffffff 50.01%
+            #ffffff50.01%
         );
         --semantic-color-background-overflow-1-left: linear-gradient(
             271.93deg,
             rgba(255, 255, 255, 0) 1.63%,
-            #ffffff 49.98%
+            #ffffff49.98%
         );
         --semantic-color-background-overflow-2-top: linear-gradient(
             1.93deg,
             rgba(246, 247, 248, 0) 1.56%,
-            #f6f7f8 49.91%
+            #f6f7f849.91%
         );
         --semantic-color-background-overflow-2-right: linear-gradient(
             88.07deg,
             rgba(246, 247, 248, 0) 1.63%,
-            #f6f7f8 50.02%
+            #f6f7f850.02%
         );
         --semantic-color-background-overflow-2-bottom: linear-gradient(
             181.93deg,
             rgba(246, 247, 248, 0) 1.63%,
-            #f6f7f8 50.01%
+            #f6f7f850.01%
         );
         --semantic-color-background-overflow-2-left: linear-gradient(
             271.93deg,
             rgba(246, 247, 248, 0) 1.63%,
-            #f6f7f8 49.98%
+            #f6f7f849.98%
         );
         --semantic-color-background-overlay: rgba(0, 0, 0, 0.72);
         --semantic-color-background-dialog: #ffffff;
@@ -88,7 +56,6 @@
         --semantic-color-status-warning: #e18d00;
         --semantic-color-status-danger: #db0800;
     }
-
     .theme--dark {
         --semantic-color-background-primary-base: #11141b;
         --semantic-color-background-primary-container: #181c25;
@@ -97,42 +64,42 @@
         --semantic-color-background-overflow-1-top: linear-gradient(
             1.93deg,
             rgba(17, 20, 27, 0) 1.56%,
-            #11141b 49.91%
+            #11141b49.91%
         );
         --semantic-color-background-overflow-1-right: linear-gradient(
             88.07deg,
             rgba(17, 20, 27, 0) 1.63%,
-            #11141b 50.02%
+            #11141b50.02%
         );
         --semantic-color-background-overflow-1-bottom: linear-gradient(
             181.93deg,
             rgba(17, 20, 27, 0) 1.63%,
-            #11141b 50.01%
+            #11141b50.01%
         );
         --semantic-color-background-overflow-1-left: linear-gradient(
             271.93deg,
             rgba(17, 20, 27, 0) 1.63%,
-            #11141b 49.98%
+            #11141b49.98%
         );
         --semantic-color-background-overflow-2-top: linear-gradient(
             1.93deg,
             rgba(24, 28, 37, 0) 1.56%,
-            #181c25 49.91%
+            #181c2549.91%
         );
         --semantic-color-background-overflow-2-right: linear-gradient(
             88.07deg,
             rgba(24, 28, 37, 0) 1.63%,
-            #181c25 50.02%
+            #181c2550.02%
         );
         --semantic-color-background-overflow-2-bottom: linear-gradient(
             181.93deg,
             rgba(24, 28, 37, 0) 1.63%,
-            #181c25 50.01%
+            #181c2550.01%
         );
         --semantic-color-background-overflow-2-left: linear-gradient(
             271.93deg,
             rgba(24, 28, 37, 0) 1.63%,
-            #181c25 49.98%
+            #181c2549.98%
         );
         --semantic-color-background-overlay: rgba(0, 0, 0, 0.72);
         --semantic-color-background-dialog: #181c25;
