--- a/lib/components/Button/social/social.scss
+++ b/lib/components/Button/social/social.scss
@@ -39,10 +39,9 @@
         }
         &--apple{
             &--primary {
-                border-color: transparent;
                 background-color: var(--core-color-solid-slate-1400);
                 color: var(--core-color-solid-slate-50);
-                border: none;
+                border-color: transparent;
                 &:hover:not(:disabled){
                     background-color: var(--core-color-solid-slate-700);
                 }
@@ -50,7 +49,7 @@
                     background-color: var(--core-color-opacity-black-800);
                 }
                 &:disabled{
-                    opacity: 0.48;
+                    opacity: var(--core-opacity-600);
                   
                 }
             }
