--- a/lib/components/Button/dropdown/dropdown.scss
+++ b/lib/components/Button/dropdown/dropdown.scss
@@ -1,19 +1,19 @@
 .dropdown-menu {
     &__box{
-        gap: 4px;
+        padding-bottom:  var(--semantic-spacing-gap-sm);
     }
     &__container{
         background-color: var(--core-color-solid-slate-50);
         border-radius: var(--core-borderRadius-1200);
         box-shadow: 0px 16px 24px 4px rgba(0, 0, 0, 0.02), 0px 16px 24px 4px rgba(0, 0, 0, 0.04);
         display: flex;
+        min-width: 350px;
         padding: var(--core-spacing-400);
         flex-direction: column;
         align-items: flex-start;
         max-height: 258px;
         overflow-y: scroll;
-        width: fit-content
-
+     
     }
     &__item{
         cursor: pointer ;
@@ -34,22 +34,24 @@
     }
     &__transition {
         &--enter {
-            transition: ease-out 300ms transform;         
-        }
-        &--enter-from {
-            transform: scaleY(0) translateY(-10%);
-        }
-        &--enter-to {
+            transition: transform 200ms ease-out;
+            transform-origin: top;
             transform: scaleY(0);
         }
+     
+        &--enter-to {
+            transform: scaleY(1);
+        }
         &--leave {
-            transition: ease-out 200ms transform;
+            transition: transform 100ms ease-out;
         }
         &--leave-from {
-            transform: scaleY(0) translateY(0);
+            transform: scaleY(1);
         }
         &--leave-to {
-              transform: scaleY(0) translateY(-50%);
+            transition: transform 200ms ease-out;
+            transform: scaleY(0) translateY(50%);
+            transform-origin: top;
         }
 
     }
