--- a/lib/components/Button/dropdown/dropdown.scss
+++ b/lib/components/Button/dropdown/dropdown.scss
@@ -20,7 +20,7 @@
         display: flex;
         padding: var(--core-spacing-50) var(--core-spacing-800);
         align-items: center;
-        gap: var(--temp-static-spacing-8);
+        gap: var(--core-spacing-400);
         align-self: stretch;
         min-height: 48px;
         
