fix: generated css fontweight issues

--- a/lib/styles/sass/font.weight.scss
+++ b/lib/styles/sass/font.weight.scss
@@ -93,11 +93,11 @@
     --semantic-typography-icon-labelPaired-bold-md-fontWeight: 400;
     --semantic-typography-icon-labelPaired-bold-sm-fontWeight: 400;
     --semantic-typography-icon-labelPaired-bold-caption-fontWeight: 400;
-    --semantic-typography-icon-labelPaired-brand-xl-fontWeight:;
-    --semantic-typography-icon-labelPaired-brand-lg-fontWeight:;
-    --semantic-typography-icon-labelPaired-brand-md-fontWeight:;
-    --semantic-typography-icon-labelPaired-brand-sm-fontWeight:;
-    --semantic-typography-icon-labelPaired-brand-caption-fontWeight:;
+    --semantic-typography-icon-labelPaired-brand-xl-fontWeight: normal;
+    --semantic-typography-icon-labelPaired-brand-lg-fontWeight: normal;
+    --semantic-typography-icon-labelPaired-brand-md-fontWeight: normal;
+    --semantic-typography-icon-labelPaired-brand-sm-fontWeight: normal;
+    --semantic-typography-icon-labelPaired-brand-caption-fontWeight: normal;
     --semantic-typography-icon-standalone-regular-2xl-fontWeight: 300;
     --semantic-typography-icon-standalone-regular-xl-fontWeight: 300;
     --semantic-typography-icon-standalone-regular-lg-fontWeight: 300;
@@ -108,11 +108,11 @@
     --semantic-typography-icon-standalone-bold-lg-fontWeight: 400;
     --semantic-typography-icon-standalone-bold-md-fontWeight: 400;
     --semantic-typography-icon-standalone-bold-sm-fontWeight: 400;
-    --semantic-typography-icon-standalone-brand-2xl-fontWeight:;
-    --semantic-typography-icon-standalone-brand-xl-fontWeight:;
-    --semantic-typography-icon-standalone-brand-lg-fontWeight:;
-    --semantic-typography-icon-standalone-brand-md-fontWeight:;
-    --semantic-typography-icon-standalone-brand-sm-fontWeight:;
+    --semantic-typography-icon-standalone-brand-2xl-fontWeight: normal;
+    --semantic-typography-icon-standalone-brand-xl-fontWeight: normal;
+    --semantic-typography-icon-standalone-brand-lg-fontWeight: normal;
+    --semantic-typography-icon-standalone-brand-md-fontWeight: normal;
+    --semantic-typography-icon-standalone-brand-sm-fontWeight: normal;
 }
 @media (min-width: 640px) {
     :root {
@@ -205,11 +205,11 @@
         --semantic-typography-icon-labelPaired-bold-md-fontWeight: 400;
         --semantic-typography-icon-labelPaired-bold-sm-fontWeight: 400;
         --semantic-typography-icon-labelPaired-bold-caption-fontWeight: 400;
-        --semantic-typography-icon-labelPaired-brand-xl-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-lg-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-md-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-sm-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-caption-fontWeight:;
+        --semantic-typography-icon-labelPaired-brand-xl-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-lg-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-md-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-sm-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-caption-fontWeight: normal;
         --semantic-typography-icon-standalone-regular-2xl-fontWeight: 300;
         --semantic-typography-icon-standalone-regular-xl-fontWeight: 300;
         --semantic-typography-icon-standalone-regular-lg-fontWeight: 300;
@@ -220,11 +220,11 @@
         --semantic-typography-icon-standalone-bold-lg-fontWeight: 400;
         --semantic-typography-icon-standalone-bold-md-fontWeight: 400;
         --semantic-typography-icon-standalone-bold-sm-fontWeight: 400;
-        --semantic-typography-icon-standalone-brand-2xl-fontWeight:;
-        --semantic-typography-icon-standalone-brand-xl-fontWeight:;
-        --semantic-typography-icon-standalone-brand-lg-fontWeight:;
-        --semantic-typography-icon-standalone-brand-md-fontWeight:;
-        --semantic-typography-icon-standalone-brand-sm-fontWeight:;
+        --semantic-typography-icon-standalone-brand-2xl-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-xl-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-lg-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-md-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-sm-fontWeight: normal;
     }
 }
 @media (min-width: 768px) {
@@ -318,11 +318,11 @@
         --semantic-typography-icon-labelPaired-bold-md-fontWeight: 400;
         --semantic-typography-icon-labelPaired-bold-sm-fontWeight: 400;
         --semantic-typography-icon-labelPaired-bold-caption-fontWeight: 400;
-        --semantic-typography-icon-labelPaired-brand-xl-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-lg-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-md-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-sm-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-caption-fontWeight:;
+        --semantic-typography-icon-labelPaired-brand-xl-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-lg-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-md-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-sm-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-caption-fontWeight: normal;
         --semantic-typography-icon-standalone-regular-2xl-fontWeight: 300;
         --semantic-typography-icon-standalone-regular-xl-fontWeight: 300;
         --semantic-typography-icon-standalone-regular-lg-fontWeight: 300;
@@ -333,11 +333,11 @@
         --semantic-typography-icon-standalone-bold-lg-fontWeight: 400;
         --semantic-typography-icon-standalone-bold-md-fontWeight: 400;
         --semantic-typography-icon-standalone-bold-sm-fontWeight: 400;
-        --semantic-typography-icon-standalone-brand-2xl-fontWeight:;
-        --semantic-typography-icon-standalone-brand-xl-fontWeight:;
-        --semantic-typography-icon-standalone-brand-lg-fontWeight:;
-        --semantic-typography-icon-standalone-brand-md-fontWeight:;
-        --semantic-typography-icon-standalone-brand-sm-fontWeight:;
+        --semantic-typography-icon-standalone-brand-2xl-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-xl-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-lg-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-md-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-sm-fontWeight: normal;
     }
 }
 @media (min-width: 1024px) {
@@ -431,11 +431,11 @@
         --semantic-typography-icon-labelPaired-bold-md-fontWeight: 400;
         --semantic-typography-icon-labelPaired-bold-sm-fontWeight: 400;
         --semantic-typography-icon-labelPaired-bold-caption-fontWeight: 400;
-        --semantic-typography-icon-labelPaired-brand-xl-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-lg-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-md-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-sm-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-caption-fontWeight:;
+        --semantic-typography-icon-labelPaired-brand-xl-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-lg-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-md-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-sm-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-caption-fontWeight: normal;
         --semantic-typography-icon-standalone-regular-2xl-fontWeight: 300;
         --semantic-typography-icon-standalone-regular-xl-fontWeight: 300;
         --semantic-typography-icon-standalone-regular-lg-fontWeight: 300;
@@ -446,11 +446,11 @@
         --semantic-typography-icon-standalone-bold-lg-fontWeight: 400;
         --semantic-typography-icon-standalone-bold-md-fontWeight: 400;
         --semantic-typography-icon-standalone-bold-sm-fontWeight: 400;
-        --semantic-typography-icon-standalone-brand-2xl-fontWeight:;
-        --semantic-typography-icon-standalone-brand-xl-fontWeight:;
-        --semantic-typography-icon-standalone-brand-lg-fontWeight:;
-        --semantic-typography-icon-standalone-brand-md-fontWeight:;
-        --semantic-typography-icon-standalone-brand-sm-fontWeight:;
+        --semantic-typography-icon-standalone-brand-2xl-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-xl-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-lg-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-md-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-sm-fontWeight: normal;
     }
 }
 @media (min-width: 1280px) {
@@ -544,11 +544,11 @@
         --semantic-typography-icon-labelPaired-bold-md-fontWeight: 400;
         --semantic-typography-icon-labelPaired-bold-sm-fontWeight: 400;
         --semantic-typography-icon-labelPaired-bold-caption-fontWeight: 400;
-        --semantic-typography-icon-labelPaired-brand-xl-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-lg-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-md-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-sm-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-caption-fontWeight:;
+        --semantic-typography-icon-labelPaired-brand-xl-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-lg-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-md-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-sm-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-caption-fontWeight: normal;
         --semantic-typography-icon-standalone-regular-2xl-fontWeight: 300;
         --semantic-typography-icon-standalone-regular-xl-fontWeight: 300;
         --semantic-typography-icon-standalone-regular-lg-fontWeight: 300;
@@ -559,11 +559,11 @@
         --semantic-typography-icon-standalone-bold-lg-fontWeight: 400;
         --semantic-typography-icon-standalone-bold-md-fontWeight: 400;
         --semantic-typography-icon-standalone-bold-sm-fontWeight: 400;
-        --semantic-typography-icon-standalone-brand-2xl-fontWeight:;
-        --semantic-typography-icon-standalone-brand-xl-fontWeight:;
-        --semantic-typography-icon-standalone-brand-lg-fontWeight:;
-        --semantic-typography-icon-standalone-brand-md-fontWeight:;
-        --semantic-typography-icon-standalone-brand-sm-fontWeight:;
+        --semantic-typography-icon-standalone-brand-2xl-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-xl-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-lg-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-md-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-sm-fontWeight: normal;
     }
 }
 @media (min-width: 1440px) {
@@ -657,11 +657,11 @@
         --semantic-typography-icon-labelPaired-bold-md-fontWeight: 400;
         --semantic-typography-icon-labelPaired-bold-sm-fontWeight: 400;
         --semantic-typography-icon-labelPaired-bold-caption-fontWeight: 400;
-        --semantic-typography-icon-labelPaired-brand-xl-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-lg-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-md-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-sm-fontWeight:;
-        --semantic-typography-icon-labelPaired-brand-caption-fontWeight:;
+        --semantic-typography-icon-labelPaired-brand-xl-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-lg-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-md-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-sm-fontWeight: normal;
+        --semantic-typography-icon-labelPaired-brand-caption-fontWeight: normal;
         --semantic-typography-icon-standalone-regular-2xl-fontWeight: 300;
         --semantic-typography-icon-standalone-regular-xl-fontWeight: 300;
         --semantic-typography-icon-standalone-regular-lg-fontWeight: 300;
@@ -672,10 +672,10 @@
         --semantic-typography-icon-standalone-bold-lg-fontWeight: 400;
         --semantic-typography-icon-standalone-bold-md-fontWeight: 400;
         --semantic-typography-icon-standalone-bold-sm-fontWeight: 400;
-        --semantic-typography-icon-standalone-brand-2xl-fontWeight:;
-        --semantic-typography-icon-standalone-brand-xl-fontWeight:;
-        --semantic-typography-icon-standalone-brand-lg-fontWeight:;
-        --semantic-typography-icon-standalone-brand-md-fontWeight:;
-        --semantic-typography-icon-standalone-brand-sm-fontWeight:;
+        --semantic-typography-icon-standalone-brand-2xl-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-xl-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-lg-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-md-fontWeight: normal;
+        --semantic-typography-icon-standalone-brand-sm-fontWeight: normal;
     }
 }
