chore: renamed sass folder

--- a/lib/styles/quill.color.scss
+++ b/lib/styles/quill.color.scss
@@ -1,4 +1,4 @@
-@import "./sass/color.gradient.scss";
-@import "./sass/color.opacity.scss";
-@import "./sass/color.scss";
-@import "./sass/color.semantic.scss";
+@import "./quill/color.gradient.scss";
+@import "./quill/color.opacity.scss";
+@import "./quill/color.scss";
+@import "./quill/color.semantic.scss";
