--- a/lib/styles/quill.typhography.scss
+++ b/lib/styles/quill.typhography.scss
@@ -1,6 +1,6 @@
-@import "./sass/font.family.scss";
-@import "./sass/font.size.scss";
-@import "./sass/font.weight.scss";
-@import "./sass/letter.spacing.scss";
-@import "./sass/line.height.scss";
-@import "./sass/color.semantic.scss";
+@import "./quill/font.family.scss";
+@import "./quill/font.size.scss";
+@import "./quill/font.weight.scss";
+@import "./quill/letter.spacing.scss";
+@import "./quill/line.height.scss";
+@import "./quill/color.semantic.scss";
