fix: breakpoint name

--- a/lib/styles/quill/breakpoints.scss
+++ b/lib/styles/quill/breakpoints.scss
@@ -19,7 +19,7 @@
             @content;
         }
     }
-    @if $breakpoint == "xl2" {
+    @if $breakpoint == "2xl" {
         @media (min-width: 1440px) {
             @content;
         }
